--- a/static/system/min/.htaccess
+++ b/static/system/min/.htaccess
@@ -1,3 +1,6 @@
+<Files "index.php">
+	Allow from all
+</Files>
 <IfModule mod_rewrite.c>
 RewriteEngine on
 RewriteRule ^([a-z]=.*)  index.php?$1  [L,NE]
