--- a/var/configuration.ini
+++ b/var/configuration.ini
@@ -4,6 +4,7 @@ database.host = "localhost"
 database.username = "root"
 database.password = ""
 database.dbname = "zfapp"
+database.table_prefix = "prefix_"
 bootstrap.path = APPLICATION_PATH "Bootstrap.php"
 [staging : production]
 [development : production]
