Add table prefix for all Zend_DB_Table objects in App_DB_Table. Create global constant DB_TABLE_PREFIX for sql queries.

--- a/trunk/var/configuration.ini
+++ b/trunk/var/configuration.ini
@@ -4,6 +4,7 @@ database.host = "localhost"
 database.username = "root"
 database.password = ""
 database.dbname = "zfapp"
+database.table_prefix = "prefix_"
 bootstrap.path = APPLICATION_PATH "Bootstrap.php"
 [staging : production]
 [development : production]
