--- a/var/configuration.ini
+++ b/var/configuration.ini
@@ -5,6 +5,6 @@ database.username = "root"
 database.password = ""
 database.dbname = "zfapp"
 database.table_prefix = "prefix_"
-bootstrap.path = APPLICATION_PATH "Bootstrap.php"
+bootstrap.path = APPLICATION_PATH "bootstrap.php"
 [staging : production]
 [development : production]
