--- a/var/configuration.ini
+++ b/var/configuration.ini
@@ -4,3 +4,4 @@ database.username = "root"
 database.password = ""
 database.dbname = "zfapp"
 database.table_prefix = "prefix_"
+backoffice_path = "admin"
