--- a/var/configuration.ini
+++ b/var/configuration.ini
@@ -5,3 +5,4 @@ database.password = ""
 database.dbname = "zfapp"
 database.table_prefix = "prefix_"
 backoffice_path = "admin"
+session_type = "file"
