--- a/trunk/var/configuration.ini
+++ b/trunk/var/configuration.ini
@@ -5,4 +5,4 @@ database.password = ""
 database.dbname = "zfapp"
 database.table_prefix = "prefix_"
 backoffice_path = "admin"
-session_type = "file"
+session_save_handler = "file"
